<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!--    <TextView-->
    <!--            android:text="@string/add_service"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:id="@+id/textView"-->
    <!--            android:layout_marginTop="12dp"-->
    <!--            android:textSize="24sp"-->
    <!--            android:textColor="@color/purple_700"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <View-->
    <!--            android:id="@+id/topLine"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="2dp"-->
    <!--            android:background="@color/purple_500"-->
    <!--            app:layout_constraintTop_toBottomOf="@+id/textView"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent" />-->

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:id="@+id/cardView"

            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal">


        <androidx.cardview.widget.CardView
                android:layout_width="155dp"
                android:layout_height="155dp"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="@color/white">

            <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center">

                <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitCenter" />

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>


    <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24"
            android:id="@+id/photoUploadIcon"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView"
            app:layout_constraintBottom_toBottomOf="@+id/cardView" />


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/service_name"
            android:layout_marginTop="18dp"
            android:textAlignment="textStart"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:textDirection="ltr"
                android:textAlignment="textEnd"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:layout_marginTop="18dp"
            android:textAlignment="textStart"

            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:textDirection="ltr"
                android:textAlignment="textEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/callNumber"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/call_number"
            android:layout_marginTop="18dp"
            android:textAlignment="textStart"

            app:layout_constraintTop_toBottomOf="@+id/address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:textDirection="ltr"
                android:textAlignment="textEnd"

                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:id="@+id/addButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>